Simplify stream api calls