@@ -19,7 +19,6 @@ import variablearc.evaluation.ExpressionSolver;
 import variablearc._cocos.util.VariationConditionHelper;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ConnectorTimingsFit4Family implements ArcBasisASTArcComponentTypeCoCo {
 
@@ -51,7 +50,7 @@ public class ConnectorTimingsFit4Family implements ArcBasisASTArcComponentTypeCo
         Map<String, PortInfo> portNameInfos = new HashMap<>();
 
         // Reading and processing parts of the Main-Component
-        List<String> mainFeatures = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTArcFeatureDeclaration).map(v -> ((ASTArcFeatureDeclaration) v)).map(ASTArcFeatureDeclaration::getArcFeatureList).flatMap(List::stream).map(e -> node.getSymbol().getFullName() + "." + e.getSymbol().getName()).collect(Collectors.toList());
+        List<String> mainFeatures = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTArcFeatureDeclaration).map(v -> ((ASTArcFeatureDeclaration) v)).map(ASTArcFeatureDeclaration::getArcFeatureList).flatMap(List::stream).map(e -> node.getSymbol().getFullName() + "." + e.getSymbol().getName()).toList();
 
         // Managing all features, variations, constraints and connectors
         List<String> allFeatures;
@@ -80,7 +79,7 @@ public class ConnectorTimingsFit4Family implements ArcBasisASTArcComponentTypeCo
         ExpressionSet mainConstraintSet = ((IVariableArcComponentTypeSymbol) node.getSymbol()).getConstraints();
         allConstraints.add(mainConstraintSet);
 
-        List<ASTArcPort> mainPorts = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTComponentInterface).map(v -> ((ASTComponentInterface) v).getPortDeclarationList()).flatMap(List::stream).map(ASTPortDeclaration::getArcPortList).flatMap(List::stream).collect(Collectors.toList());
+        List<ASTArcPort> mainPorts = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTComponentInterface).map(v -> ((ASTComponentInterface) v).getPortDeclarationList()).flatMap(List::stream).map(ASTPortDeclaration::getArcPortList).flatMap(List::stream).toList();
         for(ASTArcPort mainPort : mainPorts){
           portConditions.put(mainPort,ctx.mkTrue());
           portNameInfos.put(mainPort.getSymbol().getFullName(), new PortInfo(mainPort.getSymbol().getFullName(), mainPort.getSymbol().isIncoming(), mainPort.getSymbol().getTiming(), ctx.mkTrue()));
@@ -96,7 +95,7 @@ public class ConnectorTimingsFit4Family implements ArcBasisASTArcComponentTypeCo
           portNameInfos.put(port.getFullName(), new PortInfo(port.getFullName(), port.isIncoming(), port.getTiming(), ctx.mkTrue()));
         }
 
-        List<ASTComponentInstance> mainSubComps = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTComponentInstantiation).map(l -> (ASTComponentInstantiation) l).map(ASTComponentInstantiationTOP::getComponentInstanceList).flatMap(List::stream).collect(Collectors.toList());
+        List<ASTComponentInstance> mainSubComps = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTComponentInstantiation).map(l -> (ASTComponentInstantiation) l).map(ASTComponentInstantiationTOP::getComponentInstanceList).flatMap(List::stream).toList();
         for(ASTComponentInstance mainSubComp : mainSubComps){
           subcomponentConditions.put(mainSubComp,ctx.mkTrue());
         }
