@@ -32,7 +32,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static arcbasis._cocos.PortReadWriteHandler4ExpressionsBasis.ContextState;
 
@@ -51,7 +50,7 @@ public class PortReadWriteInCompute4Family implements ArcBasisASTArcComponentTyp
     Map<ASTArcCompute, BoolExpr> computeConditions;
 
     // Reading and processing parts of the Main-Component
-    List<String> mainFeatures = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTArcFeatureDeclaration).map(v -> ((ASTArcFeatureDeclaration) v)).map(ASTArcFeatureDeclaration::getArcFeatureList).flatMap(List::stream).map(e -> node.getSymbol().getFullName() + "." + e.getSymbol().getName()).collect(Collectors.toList());
+    List<String> mainFeatures = node.getBody().getArcElementList().stream().filter(e -> e instanceof ASTArcFeatureDeclaration).map(v -> ((ASTArcFeatureDeclaration) v)).map(ASTArcFeatureDeclaration::getArcFeatureList).flatMap(List::stream).map(e -> node.getSymbol().getFullName() + "." + e.getSymbol().getName()).toList();
 
     allFeatures = new ArrayList<>(mainFeatures);
     allConstraints = new ArrayList<>();
@@ -84,7 +83,7 @@ public class PortReadWriteInCompute4Family implements ArcBasisASTArcComponentTyp
           continue;
 
         BoolExpr variationExpr = ctx.mkAnd(expr.get());
-        var arcInits = variationPoint.getArcElements().stream().filter(e -> e instanceof ASTArcCompute).map(k -> (ASTArcCompute) k).collect(Collectors.toList());
+        var arcInits = variationPoint.getArcElements().stream().filter(e -> e instanceof ASTArcCompute).map(k -> (ASTArcCompute) k).toList();
 
         for (ASTArcCompute arcCompute : arcInits) {
           computeConditions.put(arcCompute, variationExpr);
@@ -130,10 +129,10 @@ public class PortReadWriteInCompute4Family implements ArcBasisASTArcComponentTyp
         for (PortReadWriteHandler4ExpressionBasis4Family.PortWithState portEntry : portContext) {
           var portName = portEntry.getPortSymbol().getName();
           // Check if there are fields shadowing ports
-          var shadowingFields = variableCollector.getDeclarators().stream().filter(e -> e.getDeclarator().getName().equals(portName)).collect(Collectors.toList());
-          var possiblePorts = portConditions.entrySet().stream().filter(e -> e.getKey().getName().equals(portName)).collect(Collectors.toList());
-          var possibleIncomingPorts = possiblePorts.stream().filter(e -> e.getKey().isPresentSymbol() && e.getKey().getSymbol().isIncoming()).collect(Collectors.toList());
-          var possibleOutgoingPorts = possiblePorts.stream().filter(e -> e.getKey().isPresentSymbol() && e.getKey().getSymbol().isOutgoing()).collect(Collectors.toList());
+          var shadowingFields = variableCollector.getDeclarators().stream().filter(e -> e.getDeclarator().getName().equals(portName)).toList();
+          var possiblePorts = portConditions.entrySet().stream().filter(e -> e.getKey().getName().equals(portName)).toList();
+          var possibleIncomingPorts = possiblePorts.stream().filter(e -> e.getKey().isPresentSymbol() && e.getKey().getSymbol().isIncoming()).toList();
+          var possibleOutgoingPorts = possiblePorts.stream().filter(e -> e.getKey().isPresentSymbol() && e.getKey().getSymbol().isOutgoing()).toList();
 
           for (Map.Entry<ASTArcPort, BoolExpr> incoming : possibleIncomingPorts) {
             computeEntryExpressionList.addAll(List.of(featureConstraints, incoming.getValue()));
